sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
var int i=0
^AlgBubbleSort1:3: error: expected class or object definition
def bubbleSort()  {
^